Affixed menu made permanently fixed to avoid jumps when scrolling

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -59,6 +59,7 @@ h3 {
     padding: 60px 0;
     margin-top: -1px;
     font-size: 20px;
+    margin-top: 67px;
 }
 
 .casetestimonial img {
@@ -103,4 +104,12 @@ h3 {
 
 .box-simple p {
     text-align: left;
+}
+
+#heading-breadcrumbs {
+    margin-top: 67px;
+}
+
+.home-carousel {
+    margin-top: 67px;
 }
